--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "countup": "^1.8.2",
     "countup.js": "^2.0.4",
     "echarts": "^4.2.1",
+    "inmap": "^2.2.7",
     "iview": "^3.4.1",
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.2",
