--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "countup": "^1.8.2",
     "countup.js": "^2.0.4",
+    "dayjs": "^1.8.14",
     "echarts": "^4.2.1",
     "inmap": "^2.2.7",
     "iview": "^3.4.1",
